force-app/main/default/objects/Whatsapp_Setting__mdt/Whatsapp_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Whatsapp Setting</label>
    <pluralLabel>Whatsapp Settings</pluralLabel>
</CustomObject>