force-app/main/default/objects/Whatsapp_Setting__mdt/fields/Authentication_Key__c.field-meta.xml
<CustomField>
    <fullName>Authentication_Key__c</fullName>
    <label>Authentication Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>