force-app/main/default/objects/Whatsapp_Setting__mdt/fields/Sender_ID__c.field-meta.xml
<CustomField>
    <fullName>Sender_ID__c</fullName>
    <label>Sender ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>