force-app/main/default/objects/Whatsapp_Setting__mdt/fields/Template_Number__c.field-meta.xml
<CustomField>
    <fullName>Template_Number__c</fullName>
    <label>Template Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>